<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hw0036493852.android.fer.hr.FormActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pathInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_relative_path"
        />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load"/>

    <ImageView
        android:id="@+id/avatarView"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="center"
        android:scaleType="centerInside"/>

    <TextView
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/none"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"/>

    <TextView
        android:id="@+id/lastnameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/none"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"/>

    <TextView
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/none"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"/>

    <TextView
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/none"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"/>

    <TextView
        android:id="@+id/spouseInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/none"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"/>

    <TextView
        android:id="@+id/ageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/none"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </GridLayout>


</LinearLayout>
